force-app/main/default/objects/Part_Inventory__c/Part_Inventory__c.object-meta.xml
<CustomObject>
    <label>Part Inventory</label>
    <nameField>
        <label>Part Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Part Inventories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>