force-app/main/default/objects/Part_Inventory__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>Part_Inventory__c</referenceTo>
    <relationshipLabel>Child Parts</relationshipLabel>
    <relationshipName>Child_Parts</relationshipName>
    <type>Lookup</type>
</CustomField>