force-app/main/default/objects/Part_Inventory__c/fields/Qty_In_Stock__c.field-meta.xml
<CustomField>
    <fullName>Qty_In_Stock__c</fullName>
    <label>Qty In Stock</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>